day3/dbapp/db-frontend-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-frontend-dep
  labels:
    day: day3
    sample: dbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      day: day3
      sample: dbapp
      layer: frontend
  template:
    metadata:
      labels:
        day: day3
        sample: dbapp
        layer: frontend
    spec:
      containers:
        - name: fe
          image: adminer
