day3/dbapp/db-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-backend-svc
  labels:
    day: day3
    sample: dbapp
spec:
  type: ClusterIP
  selector:
    day: day3
    sample: dbapp
    layer: backend
  ports:
    - name: postgres
      port: 5432
