day3/dbapp/db-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-frontend-svc
  labels:
    day: day3
    sample: dbapp
spec:
  type: NodePort
  selector:
    day: day3
    sample: dbapp
    layer: frontend
  ports:
    - name: adminer
      port: 8080
      nodePort: 30010
  sessionAffinity: ClientIP
